feat(reports): add private incident previews (AIRI-401) (#78)
* feat(reports): preview private incident bundles

Freeze incident evidence before preview, redact known credentials, and require explicit attachment consent in settings and the dashboard.

Report downloads now use v2 ZIP bundles with JSONL evidence and a readable summary. Replace immediate GET /api/report with mark, preview and consented save POST routes. Raw developer export remains opt-in.

Refs AIRI-401

* fix(reports): expose evidence before consent

The preview showed only a summary and attachment categories. Expose exact attachment text, readable observation pages and decoded screenshots in both report interfaces before saving.

Share attachment contents between preview and ZIP writing; test byte equality and prevent saving when evidence rendering fails.

Refs AIRI-401

* fix(reports): restore busy attachment controls

Synchronize mode buttons with every busy transition and screen rebuild. Disable mode changes immediately during preparation; restore choices after success or failure.

Add deterministic native UI coverage using a pending preview future, attempted mid-flight mode change, resize and failed preparation.

Refs AIRI-401

* fix(reports): preserve repeated incident saves

Publish each local save under a unique filename while retaining the incident report ID. Avoid filesystem-dependent atomic-move collisions and preserve earlier reviewed bundles.

Cover revised previews and unchanged repeat saves, including exact attachment contents and cleanup.

Refs AIRI-401